[package]
name = "grep-rs"
version = "0.1.0"
authors = ["matsumoto <kentaro_matsumoto@forcia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
grep-core = { git = "http://gitlab.fdev/matsumoto/grep-core.git" }
