[package]
name = "grep-cli"
version = "0.1.0"
authors = ["matsumoto <kentaro_matsumoto@forcia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
grep-core = { git = "https://github.com/forcia/software-design-2020-06-grep-core.git" }
